[gd_scene load_steps=7 format=3 uid="uid://byc0b87sco5sy"]

[ext_resource type="Script" path="res://modules/character/behavior/behavior.gd" id="1_npgrb"]
[ext_resource type="PackedScene" uid="uid://d3ehamp3spykj" path="res://modules/character/behavior/memory/memory_rule_love.tscn" id="2_gagjs"]
[ext_resource type="PackedScene" uid="uid://d2oryu32gdpmj" path="res://modules/character/behavior/memory/memory_rule_know.tscn" id="3_pwrhs"]

[sub_resource type="Animation" id="Animation_au7kl"]
resource_name = "move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:SPEED_FACTOR")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_g8i4d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:SPEED_FACTOR")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6bk7k"]
_data = {
"RESET": SubResource("Animation_g8i4d"),
"move": SubResource("Animation_au7kl")
}

[node name="Behavior" type="Node"]
script = ExtResource("1_npgrb")
PERSONALITY_SOCIABILITY = 1.0
PERSONALITY_CURIOSITY = 0.5
PERSONALITY_BOUNDARY_FEAR = 10.0
TIMER_CURIOSITY_WAIT_TIME = 3.0
TIMER_CURIOSITY_WAIT_TIME_RANDOM = 0.25

[node name="MemoryRules" type="Node" parent="."]

[node name="MemoryRuleLove" parent="MemoryRules" instance=ExtResource("2_gagjs")]
BEHAVIOR_PATH = NodePath("../..")

[node name="MemoryRuleKnow" parent="MemoryRules" instance=ExtResource("3_pwrhs")]
BEHAVIOR_PATH = NodePath("../..")

[node name="TimerCuriosity" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayerMove" type="AnimationPlayer" parent="."]
autoplay = "move"
libraries = {
"": SubResource("AnimationLibrary_6bk7k")
}

[connection signal="timeout" from="TimerCuriosity" to="." method="_on_timer_curiosity_timeout"]
